# interview-challenge

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  challenge_server.py  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml  migrate.py  pyproject.toml  requirements-extras.txt  requirements.txt  wsgi.py
.travis/: docker_push  docker_release
solution/: solution.py
src/: challenge_server.py  migrate.py  solution.py  wsgi.py
