[tool.poetry]
name = "interview-challenge"
version = "0.0.0"
description = "A web API scavenger hunt, programmatically search for the next clue!"
authors = ["Manu Phatak <bionikspoon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.0"
Flask = "0.10.1"
Werkzeug = "0.11.4"


[tool.poetry.dev-dependencies]
requests = "2.9.1"
black = {version = "^20.8b1", allow-prereleases = true}
future = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
